[gd_scene load_steps=47 format=3 uid="uid://djfo2ggqgpq5m"]

[ext_resource type="Script" path="res://enemies/goblin/goblin.gd" id="1_u0c15"]
[ext_resource type="Texture2D" uid="uid://dcda0rk7vdv37" path="res://game assets test/Monsters_Creatures_Fantasy/Goblin/Attack.png" id="2_o5lts"]
[ext_resource type="PackedScene" uid="uid://cf5p4jifvkr5q" path="res://components/character_components/health_component.tscn" id="2_vmbxs"]
[ext_resource type="PackedScene" uid="uid://bci8dwt4iycg0" path="res://components/character_components/velocity_component.tscn" id="3_xmp28"]
[ext_resource type="PackedScene" uid="uid://dprnmdpqf2q34" path="res://components/character_components/hit_box_component.tscn" id="4_jmetp"]
[ext_resource type="PackedScene" uid="uid://ba2mdypfi1l0u" path="res://components/character_components/animation_component.tscn" id="5_rs7lu"]
[ext_resource type="PackedScene" uid="uid://cnb86u6w26c04" path="res://components/character_states/character_state_machine.tscn" id="6_xjj4w"]
[ext_resource type="Texture2D" uid="uid://4hlwq8i1ixxc" path="res://game assets test/monster_aswang/monster001eyes.png" id="7_o2vdr"]
[ext_resource type="PackedScene" uid="uid://bmqtc073dk43x" path="res://components/character_components/attack_component.tscn" id="8_5nilr"]
[ext_resource type="PackedScene" uid="uid://cni7yp7s8ub7m" path="res://components/character_states/state_component.tscn" id="8_b6i2a"]
[ext_resource type="PackedScene" uid="uid://82fic0hyyxbq" path="res://components/character_components/attack_collision_component.tscn" id="9_3kuty"]
[ext_resource type="Script" path="res://enemies/goblin/GoblinGroundState.gd" id="9_mypgv"]
[ext_resource type="PackedScene" uid="uid://bgedrb0rxmvnc" path="res://components/character_states/hit_state.tscn" id="10_74t7v"]
[ext_resource type="PackedScene" uid="uid://bsrnejlsx5kut" path="res://components/character_components/attack_detection_component.tscn" id="10_snb4g"]
[ext_resource type="PackedScene" uid="uid://d1ryhs5mbdtww" path="res://components/character_states/enemy_dead_state.tscn" id="11_1k0bx"]
[ext_resource type="Script" path="res://components/character_states/EnemyAttackState.gd" id="12_8espu"]
[ext_resource type="PackedScene" uid="uid://bo3jadkrsersr" path="res://components/character_components/enemy_detection_component.tscn" id="17_egjl2"]
[ext_resource type="Script" path="res://enemies/goblin/Attack1.gd" id="19_fmpdm"]
[ext_resource type="Script" path="res://enemies/goblin/Attack1Area.gd" id="20_33v7t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_313mf"]
radius = 7.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5qjch"]
size = Vector2(10, 21.5)

[sub_resource type="Animation" id="Animation_ol8dk"]
resource_name = "Attack1"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Attack1/Attack1Area:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_o2vdr")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_ycu56"]
resource_name = "Death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_o2vdr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55]
}

[sub_resource type="Animation" id="Animation_qjs6t"]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_o2vdr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [40, 41, 42]
}

[sub_resource type="Animation" id="Animation_8i113"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_o2vdr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_g28to"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_o5lts")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_myibm"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_o2vdr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n6gpc"]
_data = {
"Attack1": SubResource("Animation_ol8dk"),
"Death": SubResource("Animation_ycu56"),
"Hit": SubResource("Animation_qjs6t"),
"Idle": SubResource("Animation_8i113"),
"RESET": SubResource("Animation_g28to"),
"Walk": SubResource("Animation_myibm")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8cjfn"]
animation = &"Attack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aeyxf"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_moxxq"]
animation = &"Hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_04msq"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v8tsb"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_il31o"]
animation = &"Walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_44ldv"]
blend_point_0/node = SubResource("AnimationNodeAnimation_04msq")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_v8tsb")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_il31o")
blend_point_2/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_br2wd"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sq08g"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_var7u"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0j8we"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hrvg6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2k0q4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ka6yj"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_brsap"]
states/Attack1/node = SubResource("AnimationNodeAnimation_8cjfn")
states/Attack1/position = Vector2(442, 23)
states/Death/node = SubResource("AnimationNodeAnimation_aeyxf")
states/Death/position = Vector2(653, 88)
states/Hit/node = SubResource("AnimationNodeAnimation_moxxq")
states/Hit/position = Vector2(480, 153)
states/Move/node = SubResource("AnimationNodeBlendSpace1D_44ldv")
states/Move/position = Vector2(427, 88)
transitions = ["Start", "Move", SubResource("AnimationNodeStateMachineTransition_br2wd"), "Move", "Attack1", SubResource("AnimationNodeStateMachineTransition_sq08g"), "Attack1", "Move", SubResource("AnimationNodeStateMachineTransition_var7u"), "Move", "Hit", SubResource("AnimationNodeStateMachineTransition_0j8we"), "Hit", "Move", SubResource("AnimationNodeStateMachineTransition_hrvg6"), "Move", "Death", SubResource("AnimationNodeStateMachineTransition_2k0q4"), "Death", "End", SubResource("AnimationNodeStateMachineTransition_ka6yj")]

[sub_resource type="CircleShape2D" id="CircleShape2D_t6yb0"]
radius = 800.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfrxp"]
size = Vector2(48, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hawr"]
size = Vector2(32, 32)

[node name="Goblin" type="CharacterBody2D" node_paths=PackedStringArray("hit_state", "attack1_component") groups=["enemy"]]
collision_layer = 4
collision_mask = 33
script = ExtResource("1_u0c15")
hit_state = NodePath("CharacterStateMachine/Hit")
attack1_component = NodePath("Attack1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_313mf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 6)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_o5lts")
hframes = 8
vframes = 8

[node name="HealthComponent" parent="." node_paths=PackedStringArray("dead_state") instance=ExtResource("2_vmbxs")]
max_health = 20.0
dead_state = NodePath("../CharacterStateMachine/Dead")

[node name="VelocityComponent" parent="." instance=ExtResource("3_xmp28")]
max_speed = 80.0

[node name="HitBoxComponent" parent="." node_paths=PackedStringArray("health_component", "area", "hit_state") instance=ExtResource("4_jmetp")]
collision_layer = 4
health_component = NodePath("../HealthComponent")
area = NodePath("CollisionShape2D")
hit_state = NodePath("../CharacterStateMachine/Hit")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(0, 5.25)
shape = SubResource("RectangleShape2D_5qjch")

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite", "animation_player", "animation_tree") instance=ExtResource("5_rs7lu")]
sprite = NodePath("../Sprite2D")
animation_player = NodePath("AnimationPlayer")
animation_tree = NodePath("AnimationTree")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationComponent"]
libraries = {
"": SubResource("AnimationLibrary_n6gpc")
}

[node name="AnimationTree" type="AnimationTree" parent="AnimationComponent"]
tree_root = SubResource("AnimationNodeStateMachine_brsap")
anim_player = NodePath("../AnimationPlayer")
parameters/Move/blend_position = 0.00150156

[node name="CharacterStateMachine" parent="." node_paths=PackedStringArray("character", "animation_component", "current_state") instance=ExtResource("6_xjj4w")]
character = NodePath("..")
animation_component = NodePath("../AnimationComponent")
current_state = NodePath("Ground")

[node name="Ground" parent="CharacterStateMachine" node_paths=PackedStringArray("melee_attack1", "attack1_detector", "attack_state") instance=ExtResource("8_b6i2a")]
script = ExtResource("9_mypgv")
melee_attack1 = NodePath("../../Attack1")
attack1_detector = NodePath("../../Attack1/EnemyDetector")
attack_state = NodePath("../Attack")
attack1_node = "Attack1"

[node name="Hit" parent="CharacterStateMachine" node_paths=PackedStringArray("health_component", "hitbox_component", "dead_state", "return_state") instance=ExtResource("10_74t7v")]
health_component = NodePath("../../HealthComponent")
hitbox_component = NodePath("../../HitBoxComponent")
dead_state = NodePath("../Dead")
return_state = NodePath("../Ground")
can_move = false

[node name="Dead" parent="CharacterStateMachine" instance=ExtResource("11_1k0bx")]
can_move = false

[node name="Attack" parent="CharacterStateMachine" node_paths=PackedStringArray("animation_component", "return_state") instance=ExtResource("8_b6i2a")]
script = ExtResource("12_8espu")
animation_component = NodePath("../../AnimationComponent")
return_state = NodePath("../Ground")
return_animation_node = "Move"
attack1_name = "Attack1"
can_move = false

[node name="EnemyDetectionComponent" parent="." node_paths=PackedStringArray("detection_area") instance=ExtResource("17_egjl2")]
visible = false
detection_area = NodePath("EnemyDetection")

[node name="EnemyDetection" type="Area2D" parent="EnemyDetectionComponent"]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionComponent/EnemyDetection"]
shape = SubResource("CircleShape2D_t6yb0")

[node name="Attack1" parent="." node_paths=PackedStringArray("attack_area", "detection_collision_component", "animation_component", "attack_collision_component", "use_state") instance=ExtResource("8_5nilr")]
script = ExtResource("19_fmpdm")
damage = 10.0
attack_area = NodePath("Attack1Area")
knockback_distance = 100.0
detection_collision_component = NodePath("EnemyDetector/DetectionCollisionComponent")
animation_component = NodePath("../AnimationComponent")
attack_collision_component = NodePath("Attack1Area/AttackCollisionComponent")
cd_time = 2.0
attack_name = "Attack1"
use_state = NodePath("../CharacterStateMachine/Ground")

[node name="Attack1Area" type="Area2D" parent="Attack1" node_paths=PackedStringArray("ground_state")]
collision_layer = 0
collision_mask = 42
script = ExtResource("20_33v7t")
ground_state = NodePath("../../CharacterStateMachine/Ground")

[node name="AttackCollisionComponent" parent="Attack1/Attack1Area" instance=ExtResource("9_3kuty")]
position = Vector2(24, 0)
shape = SubResource("RectangleShape2D_nfrxp")
facing_left_position = Vector2(-24, 0)
facing_right_position = Vector2(24, 0)

[node name="EnemyDetector" parent="Attack1" node_paths=PackedStringArray("attack_component") instance=ExtResource("10_snb4g")]
collision_layer = 0
collision_mask = 42
attack_component = NodePath("..")

[node name="DetectionCollisionComponent" parent="Attack1/EnemyDetector" instance=ExtResource("9_3kuty")]
position = Vector2(16, 0)
shape = SubResource("RectangleShape2D_5hawr")
facing_left_position = Vector2(-16, 0)
facing_right_position = Vector2(16, 0)

[connection signal="on_death" from="HealthComponent" to="CharacterStateMachine" method="_on_health_component_on_death"]
[connection signal="on_hit" from="HitBoxComponent" to="CharacterStateMachine/Hit" method="_on_hit_box_component_on_hit"]
[connection signal="animation_finished" from="AnimationComponent/AnimationTree" to="AnimationComponent" method="_on_animation_tree_animation_finished"]
[connection signal="chase_enemy" from="EnemyDetectionComponent" to="." method="set_chase_player"]
[connection signal="body_entered" from="EnemyDetectionComponent/EnemyDetection" to="EnemyDetectionComponent" method="_on_enemy_detection_body_entered"]
[connection signal="body_exited" from="EnemyDetectionComponent/EnemyDetection" to="EnemyDetectionComponent" method="_on_enemy_detection_body_exited"]
[connection signal="body_entered" from="Attack1/Attack1Area" to="Attack1" method="_on_attack_1_body_entered"]
[connection signal="body_shape_entered" from="Attack1/Attack1Area" to="Attack1" method="_on_attack_1_area_body_shape_entered"]
[connection signal="body_shape_entered" from="Attack1/EnemyDetector" to="Attack1/EnemyDetector" method="_on_body_shape_entered"]
